# steps_detector

./: .gitignore  README.org  phone-recorder.html
data-logger/: .gitignore  sdkconfig.old
data-logger/main/: CMakeLists.txt  app_core.c  app_core.h  example_qspi_with_ram.c  gui.c  gui.h  gui_alarma.c  gui_config.c  gui_hw.c  gui_main.c  gui_pasos.c  gui_wifi.c  hardware.h  hw_mic.c  hw_mic.h  hw_rtc.c  hw_rtc.h  hw_sd.c  idf_component.yml  logger.c
data-logger/main/gui/: gui_config.c  gui_hostname.h  gui_hw.h  gui_pasos.c  gui_screens.h
data-logger/main/hardware/: hardware.c  hw_display.c  hw_display.h  hw_rtc.c
logger/: phone-recorder.html
proyecto_ml/: entrenar_acelerometro.py  entrenar_clasico.py  main_pipeline.py  requirements.txt
raw-data/: caminando_20260520_081915_50Hz.csv  caminando_20260520_081915_acelerometro.csv  caminando_20260520_082756_50Hz.csv  caminando_20260520_082756_acelerometro.csv  caminando_20260520_083706_50Hz.csv  caminando_20260520_083706_acelerometro.csv  caminando_20260529_120235_acelerometro.csv  caminando_20260529_120732_acelerometro.csv  caminando_20260529_121247_acelerometro.csv  graficador.m  octave-workspace  remuestrear_50hz.py  sin_caminando_20260520_082402_50Hz.csv  sin_caminando_20260520_082402_acelerometro.csv  sin_caminando_20260520_082644_50Hz.csv  sin_caminando_20260520_082644_acelerometro.csv  sin_caminando_20260520_083620_50Hz.csv  sincronizar_registros.py  (+4 more)
step_alarm/main/: CMakeLists.txt  Classifier.c  app_core.h  logger.h  main.c
step_alarm/main/gui/: gui.c  gui_config.c  gui_hostname.c
step_alarm/main/hardware/: hw_imu.c  hw_imu.h  hw_sd.h
(+3 files in other folders)
